# opengl_study

./: .gitignore  CMakeLists.txt  README.md  camera.c  cube.frag  cube.vert  data.h  depth_test.frag  file.c  glad.c  glfw.c  main.c  mat.c  rect.vert  single_color.frag  sky.vert  test.frag  test.vert  todo.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.h  file.h  glad.h  glfw.h  mat.h
lib/: ok_jpg.c  ok_png.c
lib/include/: ok_jpg.h  ok_png.h
lib/src/: aabb2d.c  affine.c  affine2d.c  bezier.c  box.c  cam.c  curve.c  ease.c  euler.c  frustum.c  io.c  ivec2.c  ivec3.c  ivec4.c  mat2.c  mat2x3.c  mat2x4.c  mat3.c  mat3x2.c  mat3x4.c  mat4.c  mat4x2.c  mat4x3.c  noise.c  plane.c  project.c  quat.c  ray.c  sphere.c  vec2.c  vec3.c  vec4.c
lib/src/clipspace/: ortho_lh_no.c  ortho_lh_zo.c  ortho_rh_no.c  ortho_rh_zo.c  persp_lh_no.c  persp_lh_zo.c  persp_rh_no.c  persp_rh_zo.c  project_no.c  project_zo.c  view_lh_no.c  view_lh_zo.c  view_rh_no.c  view_rh_zo.c
res/nina/source/: IseriNinaOnStage.fbx
shader/: bloom.frag  bloom.vert  bloom_final.frag  blur.frag  cube.frag  debug.frag  depth.frag  depth.geom  depth.vert  geom.frag  geom.geom  geom.vert  light.frag  light.vert  light_box.frag  normal.frag  normal.vert  obj.vert  pbr.frag  pbr.vert  quad.vert  rect.frag  shadow.frag  shadow.vert
